--- a/Tugas_1.html
+++ b/Tugas_1.html
@@ -11,7 +11,6 @@
 <center><h2>BIODATA</h2></center>
 <fieldset>
 <legend><h3>IDENTITAS DIRI</h3></legend>
-<img src="Nabila_Choirunisa.jpg" width="200px"/>
 
     <ul>
         <li>Nama Lengkap : Nabila Choirunisa</li>
@@ -40,11 +39,12 @@
     <table border="1" cellpadding="5">
         <thead>
             <tr>
-                <th colspan="5">RIWAYAT PENDIDIKAN</th>
+                <th colspan="6">RIWAYAT PENDIDIKAN</th>
             </tr>
         </thead>
         <tbody>
             <tr>
+                <th>FOTO</th>
                 <th>KATEGORI</th>
                 <th>JENJANG</th>
                 <th>INSTANSI</th>
@@ -52,6 +52,8 @@
                 <th>TAHUN LULUS</th>
             </tr>
             <tr>
+                <td rowspan="7"><img src="Nabila_Choirunisa.jpg" width="100px"/>
+                </td>
                 <td rowspan="5">FORMAL</td>
                 <td>TK</td>
                 <td>TK AL-HIDAYAH 73</td>
@@ -99,6 +101,6 @@
     </table>
 
     <br>
-    <button onclick="location.href='biodata_nabila_choirunisa.pdf'">Unduh CV</button>
+    <button onclick="location.href='biodata_nabila_choirunisa.pdf'">Unduh Biodata</button>
 </body>
 </html>
