--- a/Tugas_1.html
+++ b/Tugas_1.html
@@ -14,7 +14,7 @@
 
     <ul>
         <li>Nama Lengkap : Nabila Choirunisa</li>
-        <li>Tempat tanggal lahir    : 24 Mei 2005</li>
+        <li>Tempat tanggal lahir    : Jember, 24 Mei 2005</li>
         <li>Jenis Kelamin : Perempuan</li>
         <li>Agama : Islam</li>
         <li>Kewarganegaraan : Indonesia</li>
